# metrics_library

./: .coverage  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  metrics.md
metrics/: index.html
reference/core/: index.html
reference/genai/: index.html
reference/metrics/: index.html
search/: search_index.json
site/: 404.html  index.html
site/metrics/: index.html
site/search/: search_index.json
src/metrics_library/: __init__.py
src/metrics_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/metrics_library/core/: __init__.py  base.py
src/metrics_library/data/: prompts.yaml
src/metrics_library/genai/: __init__.py  description_generator.py  prompts.py
src/metrics_library/metrics/: __init__.py  accuracy.py  f1_score.py  log_loss.py  mae.py  mse.py
tests/: test_metrics.py
